// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /flight-log Get flight log with Id should return a single row when data is present for the given Id 1`] = `
{
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 1,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "billingRemarks": "N/A",
  "blockMins": 135,
  "blockTime": "02:15",
  "createdAt": Any<String>,
  "createdBy": "Matti1",
  "crew2MemberId": "Jukka1",
  "crew2Role": "FI",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "mikify",
  "flightMins": 105,
  "flightTime": "01:45",
  "flightType": "KOU",
  "fuelRemainingLitres": 0,
  "fuelUpliftLitres": 50,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 45,
  "invoiceNumber": "INV001",
  "isBillableFlight": true,
  "isBilled": true,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1740823200",
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "nightFlyingMins": 30,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1740816000",
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeEpoch": "1740824100",
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personalRemarks": "Smooth flight",
  "personsOnBoard": 4,
  "picMemberId": "Liisa1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740816900",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;

exports[`GET /flight-log should allow query parameters to be optional 1`] = `
{
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFTU",
  "billableMemberId": "Sanna1",
  "billingRemarks": "Night navigation exercise",
  "blockMins": 125,
  "blockTime": "02:05",
  "createdAt": Any<String>,
  "createdBy": "Sanna1",
  "crew2MemberId": "Juha1",
  "crew2Role": "FE",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "eject",
  "flightMins": 105,
  "flightTime": "01:45",
  "flightType": "MAT",
  "fuelRemainingLitres": 0,
  "fuelUpliftLitres": 45,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 60,
  "invoiceNumber": "INV004",
  "isBillableFlight": true,
  "isBilled": true,
  "isDtoTrainingFlight": false,
  "landingTimeEpoch": "1710205200",
  "landingTimeUtc": "2024-03-12T01:00:00.000Z",
  "nightFlyingMins": 115,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1710198300",
  "offBlockTimeUtc": "2024-03-11T23:05:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1710205800",
  "onBlockTimeUtc": "2024-03-12T01:10:00.000Z",
  "personalRemarks": "Cross-day night flight",
  "personsOnBoard": 2,
  "picMemberId": "Sanna1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1710198900",
  "takeoffTimeUtc": "2024-03-11T23:15:00.000Z",
  "totalTimeInService": 1.92,
  "updatedAt": Any<String>,
  "updatedBy": "Sanna1",
}
`;

exports[`GET /flight-log should only return data for the logged in user when not admin 1`] = `
{
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFTU",
  "billableMemberId": "Sanna1",
  "billingRemarks": "Night navigation exercise",
  "blockMins": 125,
  "blockTime": "02:05",
  "createdAt": Any<String>,
  "createdBy": "Sanna1",
  "crew2MemberId": "Juha1",
  "crew2Role": "FE",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "eject",
  "flightMins": 105,
  "flightTime": "01:45",
  "flightType": "MAT",
  "fuelRemainingLitres": 0,
  "fuelUpliftLitres": 45,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 60,
  "invoiceNumber": "INV004",
  "isBillableFlight": true,
  "isBilled": true,
  "isDtoTrainingFlight": false,
  "landingTimeEpoch": "1710205200",
  "landingTimeUtc": "2024-03-12T01:00:00.000Z",
  "nightFlyingMins": 115,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1710198300",
  "offBlockTimeUtc": "2024-03-11T23:05:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1710205800",
  "onBlockTimeUtc": "2024-03-12T01:10:00.000Z",
  "personalRemarks": "Cross-day night flight",
  "personsOnBoard": 2,
  "picMemberId": "Sanna1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1710198900",
  "takeoffTimeUtc": "2024-03-11T23:15:00.000Z",
  "totalTimeInService": 1.92,
  "updatedAt": Any<String>,
  "updatedBy": "Sanna1",
}
`;

exports[`GET /flight-log should return 200 for Start Date with time offset 1`] = `
{
  "aircraftRegistration": "OH-P28",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 4,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Jukka1",
  "billingRemarks": "N/A",
  "blockMins": 155,
  "blockTime": "02:35",
  "createdAt": Any<String>,
  "createdBy": "Jukka1",
  "crew2MemberId": "Pekka1",
  "crew2Role": "FI",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "da40tndra",
  "flightMins": 110,
  "flightTime": "01:50",
  "flightType": "SAR",
  "fuelRemainingLitres": 0,
  "fuelUpliftLitres": 55,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 75,
  "invoiceNumber": "INV003",
  "isBillableFlight": true,
  "isBilled": true,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1741094400",
  "landingTimeUtc": "2025-03-04T13:20:00.000Z",
  "nightFlyingMins": 60,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 3,
  "offBlockTimeEpoch": "1741086000",
  "offBlockTimeUtc": "2025-03-04T11:00:00.000Z",
  "oilUpliftLitres": 1.2,
  "onBlockTimeEpoch": "1741095300",
  "onBlockTimeUtc": "2025-03-04T13:35:00.000Z",
  "personalRemarks": "Cargo delivery",
  "personsOnBoard": 5,
  "picMemberId": "Jukka1",
  "picRole": "PIC",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1741087800",
  "takeoffTimeUtc": "2025-03-04T11:30:00.000Z",
  "totalTimeInService": 1.74,
  "updatedAt": Any<String>,
  "updatedBy": "Jukka1",
}
`;

exports[`GET /flight-log should return 200 with valid query params 1`] = `
{
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 1,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "billingRemarks": "N/A",
  "blockMins": 135,
  "blockTime": "02:15",
  "createdAt": Any<String>,
  "createdBy": "Matti1",
  "crew2MemberId": "Jukka1",
  "crew2Role": "FI",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "mikify",
  "flightMins": 105,
  "flightTime": "01:45",
  "flightType": "KOU",
  "fuelRemainingLitres": 0,
  "fuelUpliftLitres": 50,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 45,
  "invoiceNumber": "INV001",
  "isBillableFlight": true,
  "isBilled": true,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1740823200",
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "nightFlyingMins": 30,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1740816000",
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeEpoch": "1740824100",
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personalRemarks": "Smooth flight",
  "personsOnBoard": 4,
  "picMemberId": "Liisa1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740816900",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;

exports[`GET /flight-log should return all data for ac when user is admin 1`] = `
[
  {
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbSeqNo": 2,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Sanna1",
    "billingRemarks": "Night navigation exercise",
    "blockMins": 125,
    "blockTime": "02:05",
    "createdAt": Any<String>,
    "createdBy": "Sanna1",
    "crew2MemberId": "Juha1",
    "crew2Role": "FE",
    "crew3MemberId": null,
    "crew3Role": null,
    "crew4MemberId": null,
    "crew4Role": null,
    "departureAirport": "EFHK",
    "flightId": "eject",
    "flightMins": 105,
    "flightTime": "01:45",
    "flightType": "MAT",
    "fuelRemainingLitres": 0,
    "fuelUpliftLitres": 45,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 60,
    "invoiceNumber": "INV004",
    "isBillableFlight": true,
    "isBilled": true,
    "isDtoTrainingFlight": false,
    "landingTimeEpoch": "1710205200",
    "landingTimeUtc": "2024-03-12T01:00:00.000Z",
    "nightFlyingMins": 115,
    "nonBillingApprovedByMemberId": null,
    "nonBillingReason": null,
    "numberOfLandings": 1,
    "offBlockTimeEpoch": "1710198300",
    "offBlockTimeUtc": "2024-03-11T23:05:00.000Z",
    "oilUpliftLitres": 1,
    "onBlockTimeEpoch": "1710205800",
    "onBlockTimeUtc": "2024-03-12T01:10:00.000Z",
    "personalRemarks": "Cross-day night flight",
    "personsOnBoard": 2,
    "picMemberId": "Sanna1",
    "picRole": "STU",
    "privOrComFlight": "C",
    "status": "NEW",
    "takeoffTimeEpoch": "1710198900",
    "takeoffTimeUtc": "2024-03-11T23:15:00.000Z",
    "totalTimeInService": 1.92,
    "updatedAt": Any<String>,
    "updatedBy": Any<String>,
  },
  {
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbSeqNo": 1,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Matti1",
    "billingRemarks": "N/A",
    "blockMins": 135,
    "blockTime": "02:15",
    "createdAt": Any<String>,
    "createdBy": "Matti1",
    "crew2MemberId": "Jukka1",
    "crew2Role": "FI",
    "crew3MemberId": null,
    "crew3Role": null,
    "crew4MemberId": null,
    "crew4Role": null,
    "departureAirport": "EFHK",
    "flightId": "mikify",
    "flightMins": 105,
    "flightTime": "01:45",
    "flightType": "KOU",
    "fuelRemainingLitres": 0,
    "fuelUpliftLitres": 50,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 45,
    "invoiceNumber": "INV001",
    "isBillableFlight": true,
    "isBilled": true,
    "isDtoTrainingFlight": true,
    "landingTimeEpoch": "1740823200",
    "landingTimeUtc": "2025-03-01T10:00:00.000Z",
    "nightFlyingMins": 30,
    "nonBillingApprovedByMemberId": null,
    "nonBillingReason": null,
    "numberOfLandings": 1,
    "offBlockTimeEpoch": "1740816000",
    "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
    "oilUpliftLitres": 1.5,
    "onBlockTimeEpoch": "1740824100",
    "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
    "personalRemarks": "Smooth flight",
    "personsOnBoard": 4,
    "picMemberId": "Liisa1",
    "picRole": "STU",
    "privOrComFlight": "C",
    "status": "NEW",
    "takeoffTimeEpoch": "1740816900",
    "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
    "totalTimeInService": 2,
    "updatedAt": Any<String>,
    "updatedBy": Any<String>,
  },
  {
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbSeqNo": 2,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Kaisa1",
    "billingRemarks": "N/A",
    "blockMins": 132,
    "blockTime": "02:12",
    "createdAt": Any<String>,
    "createdBy": "Antti1",
    "crew2MemberId": "Antti1",
    "crew2Role": "FE",
    "crew3MemberId": null,
    "crew3Role": null,
    "crew4MemberId": null,
    "crew4Role": null,
    "departureAirport": "EFHK",
    "flightId": "bLwnAstr0",
    "flightMins": 90,
    "flightTime": "01:30",
    "flightType": "TAR",
    "fuelRemainingLitres": 0,
    "fuelUpliftLitres": 40,
    "incidentOrObservations": null,
    "instrumentFlyingMins": 30,
    "invoiceNumber": null,
    "isBillableFlight": false,
    "isBilled": false,
    "isDtoTrainingFlight": false,
    "landingTimeEpoch": "1741003200",
    "landingTimeUtc": "2025-03-03T12:00:00.000Z",
    "nightFlyingMins": 20,
    "nonBillingApprovedByMemberId": "Juha1",
    "nonBillingReason": "Club activity",
    "numberOfLandings": 1,
    "offBlockTimeEpoch": "1740996000",
    "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
    "oilUpliftLitres": 1,
    "onBlockTimeEpoch": "1741003920",
    "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
    "personalRemarks": "Routine check",
    "personsOnBoard": 3,
    "picMemberId": "Kaisa1",
    "picRole": "STU",
    "privOrComFlight": "C",
    "status": "NEW",
    "takeoffTimeEpoch": "1740997800",
    "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
    "totalTimeInService": 1.5,
    "updatedAt": Any<String>,
    "updatedBy": Any<String>,
  },
]
`;

exports[`GET /flight-log/totals should return 200 with all ac totals 1`] = `
{
  "acTotalFlightHours": 4783,
  "acTotalFlightTime": "4783:20",
  "aircraftRegistration": "OH-STL",
  "ajlbSeqNo": 3,
  "flightLogMinsThisAjlb": 0,
  "flightTimeThisAjlb": "0:00",
  "totalTlightMinsAtAjlbStart": 287000,
  "totalTlightTimeAtAjlbStart": "4783:20",
}
`;

exports[`GET /flight-log/totals should return 200 with valid registration 1`] = `
{
  "acTotalFlightHours": 4783,
  "acTotalFlightTime": "4783:20",
  "aircraftRegistration": "OH-STL",
  "ajlbSeqNo": 3,
  "flightLogMinsThisAjlb": 0,
  "flightTimeThisAjlb": "0:00",
  "totalTlightMinsAtAjlbStart": 287000,
  "totalTlightTimeAtAjlbStart": "4783:20",
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role, using NaN and [ 'flightlog.admin' ] 1`] = `
{
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Kaisa1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2MemberId": "Antti1",
  "crew2Role": "FE",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "TAR",
  "fuelRemainingLitres": 0,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picMemberId": "Kaisa1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role, using NaN and [ 'flightlog.admin' ] 2`] = `
{
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Kaisa1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2MemberId": "Antti1",
  "crew2Role": "FE",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "TAR",
  "fuelRemainingLitres": 0,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picMemberId": "Kaisa1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role, using NaN and [ 'flightlog.user' ] 1`] = `
{
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Kaisa1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2MemberId": "Antti1",
  "crew2Role": "FE",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "TAR",
  "fuelRemainingLitres": 0,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": false,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picMemberId": "Kaisa1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Kaisa1",
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role, using NaN and [ 'flightlog.user' ] 2`] = `
{
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Kaisa1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2MemberId": "Antti1",
  "crew2Role": "FE",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "TAR",
  "fuelRemainingLitres": 0,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": false,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picMemberId": "Kaisa1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Kaisa1",
}
`;
